[gd_scene load_steps=7 format=3 uid="uid://cb72lmyml655w"]

[ext_resource type="Theme" uid="uid://brxhpsbsklqkb" path="res://scenes/ui/game_theme.tres" id="1_mpyy2"]
[ext_resource type="Script" uid="uid://cvt8qtxhgorfh" path="res://scenes/ui/game_time_cycle_ui.gd" id="2_vprui"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mpyy2"]
load_path = "res://.godot/imported/ui_assets_spritesheet.png-e65e7f73d7976a86dd91c5810ac1623c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_vprui"]
atlas = SubResource("CompressedTexture2D_mpyy2")
region = Rect2(325, 418, 8, 12)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5slsl"]
load_path = "res://.godot/imported/ui_assets_spritesheet.png-e65e7f73d7976a86dd91c5810ac1623c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs01"]
atlas = SubResource("CompressedTexture2D_5slsl")
region = Rect2(306, 419, 13, 10)

[node name="GameTimeCycleUI" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_mpyy2")
script = ExtResource("2_vprui")

[node name="Day" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -118.0
offset_top = 1.0
offset_right = -61.0
offset_bottom = 41.0
theme_type_variation = &"GameTime"

[node name="MarginContainer" type="MarginContainer" parent="Day"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="DayLabel" type="Label" parent="Day/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Day 0"

[node name="Time" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -58.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 41.0
theme_type_variation = &"GameTime"

[node name="MarginContainer" type="MarginContainer" parent="Time"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TimeLabel" type="Label" parent="Time/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "00:00"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -58.0
offset_top = 42.0
offset_right = -18.0
offset_bottom = 62.0

[node name="x1" type="Button" parent="Control"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
theme_type_variation = &"GameTimeButton"

[node name="TextureRect" type="TextureRect" parent="Control/x1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_vprui")

[node name="x2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_right = 40.0
offset_bottom = 20.0
theme_type_variation = &"GameTimeButton"

[node name="TextureRect" type="TextureRect" parent="Control/x2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_2hs01")

[connection signal="pressed" from="Control/x1" to="." method="_on_x_1_pressed"]
[connection signal="pressed" from="Control/x2" to="." method="_on_x_2_pressed"]
